<resources>
    <string name="app_name">Customer CRUD</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="facade">Facade</string>
    <string name="time_window">Time Window</string>
    <string name="add_customer">Add customer</string>
    <string name="invalid_customer">Cliente inválido</string>
    <string name="customer_details">Customer details</string>
</resources>
